[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/menu/elements/Separator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/layouts/empty_layout.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/elements/ListButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/layouts/layout_06.gd" type="Script" id=4]

[node name="LayoutContainer" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="TopPlaceHolder" parent="." index="0"]
margin_bottom = 18.0

[node name="ListButton" parent="." index="1" instance=ExtResource( 3 )]
margin_top = 18.0
margin_bottom = 58.0

[node name="Left" parent="ListButton/HBoxContainer" index="0"]
text = "  0%"

[node name="Seperator" parent="." index="2" instance=ExtResource( 1 )]
margin_top = 58.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton2" parent="." index="3" instance=ExtResource( 3 )]
margin_top = 62.0
margin_bottom = 102.0

[node name="Left" parent="ListButton2/HBoxContainer" index="0"]
text = "  10%"

[node name="Seperator2" parent="." index="4" instance=ExtResource( 1 )]
margin_top = 102.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton3" parent="." index="5" instance=ExtResource( 3 )]
margin_top = 106.0
margin_bottom = 146.0

[node name="Left" parent="ListButton3/HBoxContainer" index="0"]
text = "  20%"

[node name="Seperator3" parent="." index="6" instance=ExtResource( 1 )]
margin_top = 146.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton4" parent="." index="7" instance=ExtResource( 3 )]
margin_top = 150.0
margin_bottom = 190.0

[node name="Left" parent="ListButton4/HBoxContainer" index="0"]
text = "  30%"

[node name="Seperator5" parent="." index="8" instance=ExtResource( 1 )]
margin_top = 190.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton6" parent="." index="9" instance=ExtResource( 3 )]
margin_top = 194.0
margin_bottom = 234.0

[node name="Left" parent="ListButton6/HBoxContainer" index="0"]
text = "  40%"

[node name="Seperator6" parent="." index="10" instance=ExtResource( 1 )]
margin_top = 234.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton7" parent="." index="11" instance=ExtResource( 3 )]
margin_top = 238.0
margin_bottom = 278.0

[node name="Left" parent="ListButton7/HBoxContainer" index="0"]
text = "  50%"

[node name="Seperator7" parent="." index="12" instance=ExtResource( 1 )]
margin_top = 278.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton8" parent="." index="13" instance=ExtResource( 3 )]
margin_top = 282.0
margin_bottom = 322.0

[node name="Left" parent="ListButton8/HBoxContainer" index="0"]
text = "  60%"

[node name="Seperator8" parent="." index="14" instance=ExtResource( 1 )]
margin_top = 322.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton9" parent="." index="15" instance=ExtResource( 3 )]
margin_top = 326.0
margin_bottom = 366.0

[node name="Left" parent="ListButton9/HBoxContainer" index="0"]
text = "  70%"

[node name="Seperator9" parent="." index="16" instance=ExtResource( 1 )]
margin_top = 366.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton10" parent="." index="17" instance=ExtResource( 3 )]
margin_top = 370.0
margin_bottom = 410.0

[node name="Left" parent="ListButton10/HBoxContainer" index="0"]
text = "  80%"

[node name="Seperator10" parent="." index="18" instance=ExtResource( 1 )]
margin_top = 410.0
margin_bottom = 414.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton11" parent="." index="19" instance=ExtResource( 3 )]
margin_top = 414.0
margin_bottom = 454.0

[node name="Left" parent="ListButton11/HBoxContainer" index="0"]
text = "  90%"

[node name="Seperator11" parent="." index="20" instance=ExtResource( 1 )]
margin_top = 454.0
margin_bottom = 458.0
rect_min_size = Vector2( 0, 4 )

[node name="ListButton12" parent="." index="21" instance=ExtResource( 3 )]
margin_top = 458.0
margin_bottom = 498.0

[node name="Left" parent="ListButton12/HBoxContainer" index="0"]
text = "  100%"

[node name="Seperator4" parent="." index="22" instance=ExtResource( 1 )]
margin_top = 498.0
margin_bottom = 518.0
rect_min_size = Vector2( 0, 20 )

[node name="ListButton5" parent="." index="23" instance=ExtResource( 3 )]
margin_top = 518.0
margin_bottom = 558.0

[node name="Left" parent="ListButton5/HBoxContainer" index="0"]
text = "  GO BACK"

[node name="BottomPlaceHolder" parent="." index="24"]
margin_top = 558.0

[editable path="ListButton"]
[editable path="Seperator"]
[editable path="ListButton2"]
[editable path="ListButton3"]
[editable path="ListButton4"]
[editable path="ListButton6"]
[editable path="ListButton7"]
[editable path="ListButton8"]
[editable path="ListButton9"]
[editable path="ListButton10"]
[editable path="ListButton11"]
[editable path="ListButton12"]
[editable path="ListButton5"]
